--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -195,7 +195,7 @@
                                 </select>
                             </td>
                             <!--#end if#-->
-                            <td>
+                            <td class="nowrap">
                                 <button type="submit" class="btn btn-default Save"><span class="glyphicon glyphicon-ok"></span> $T('button-save')</button>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                 </select>
                             </td>
                             <!--#end if#-->
-                            <td>
+                            <td class="nowrap">
                                 <button type="submit" class="btn btn-default Save"><span class="glyphicon glyphicon-plus"></span> $T('button-add')</button>
                             </td>
                         </tr>
@@ -342,7 +342,7 @@
                                     </select>
                                 </td>
                                 <!--#end if#-->
-                                <td>
+                                <td class="nowrap">
                                     <button type="submit" class="btn btn-default Save"><span class="glyphicon glyphicon-ok"></span> $T('button-save')</button>
                                     <button class="btn btn-default delFilter" type="button"><span class="glyphicon glyphicon-trash"></span></button>
                                     <!--#if not $rss[$feed].filter_states[$fnum]#-->
