--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -71,8 +71,8 @@
                                 </select>
                             </td>
                             <!--#end if#-->
-                            <td>
-                                <input type="text" name="dir" value="$slot.dir" size="20" /> 
+                            <td class="nowrap">
+                                <input type="text" name="dir" class="fileBrowserSmall" value="$slot.dir" size="20" data-initialdir="$defdir" data-title="$T('catFolderPath')" /> 
                             </td>
                             <td>
                                 <input type="text" name="newzbin" value="$slot.newzbin" size="20" /> 
@@ -100,6 +100,9 @@
             var theForm = \$(this).closest("form");
             theForm.attr("action", "delete").submit();
         });
+        
+        // Add autocomplete and file-browser
+        \$('.fileBrowserSmall').fileBrowser();
     });
 </script>
 
