--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -32,7 +32,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="email_dir">$T('opt-email_dir')</label>
-                    <input type="text" name="email_dir" id="email_dir" value="$email_dir" />
+                    <input type="text" name="email_dir" id="email_dir" value="$email_dir" data-initialdir="$my_home" />
                     <span class="desc">$T('explain-email_dir')</span>
                 </div>
                 <div class="field-pair">
@@ -596,7 +596,7 @@
 
 <script>
 \$(document).ready(function(){
-    \$('#email_dir').fileBrowser({ title: 'Select $T('opt-email_dir')' });
+    \$('#email_dir').fileBrowser();
     \$('#test_email').click(function () {
         if (confirm(\$('#test_email').attr('rel'))) {
 	    var data = { mode: 'test_email', apikey: '$session', output: 'json' };
