--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -102,7 +102,7 @@
         });
         
         // Add autocomplete and file-browser
-        \$('.fileBrowserSmall').fileBrowser();
+        \$('.fileBrowserSmall').typeahead().fileBrowser();
     });
 </script>
 
