--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -72,7 +72,7 @@
                                 <li><a href="#" data-time="180" data-bind="click: pauseTime">$T('Glitter-pause3h')</a></li>
                                 <li><a href="#" data-time="360" data-bind="click: pauseTime">$T('Glitter-pause6h')</a></li>
                                 <li class="divider"></li>
-                                <li><a href="#" data-bind="click: customPauseTime">$T('Glitter-custom')</a></li>
+                                <li><a href="#" data-bind="click: openCustomPauseTime">$T('Glitter-custom')</a></li>
                             </ul>
                             <span class="btn btn-default navbar-btn navbar-timeleft" data-bind="text: timeLeft"  data-toggle="dropdown">0:00</span>
                         </div>
@@ -646,8 +646,9 @@
             glitterTranslate.paused = "$T('post-Paused')";
             glitterTranslate.left = "$T('Glitter-left')";
             glitterTranslate.clearWarn = "$T('Glitter-confirmClearWarnings')";
-            glitterTranslate.pausePrompt = '$T('Glitter-pausePrompt')'.replace(/<br \/>/g, "\n").replace(/&quot;/g, "'");
-            glitterTranslate.pausePromptFail = "$T('Glitter-pausePromptFail')".replace(/<br \/>/g, "\n");
+            glitterTranslate.pausePromptFail = "$T('Glitter-pausePromptFail')"
+            glitterTranslate.pauseFor = "$T('pauseFor')"
+            glitterTranslate.minutes = "$T('mins')"
             glitterTranslate.shutdown = "$T('shutdownOK?')";
             glitterTranslate.restart = "$T('explain-Restart')".replace(/<br \/>/g, "\n");
             glitterTranslate.repair = "$T('explain-Repair')".replace(/<br \/>/g, "\n");
