--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -131,7 +131,7 @@
     <div class="section">
         <div class="col2">
             <h3>$server['displayname'] <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
-            <span class="label label-primary">$T('srv-priority'): $server['priority']</span>
+            <span class="label label-primary" data-priority="$server['priority']">$T('srv-priority'): $server['priority']</span>
             <table><tr>
               <td><input type="checkbox" class="toggleServerCheckbox" id="enable_$cur" rel="$server['name']" name="q_enable" value="1" <!--#if int($server['enable']) != 0 then 'checked="checked"' else ""#--> /></td>
               <td><label for="enable_$cur">&nbsp;$T('enabled')</label></td>
@@ -264,6 +264,25 @@
             this.submit()
         })
     })
+    
+    /** 
+        Color the priority labels
+    **/
+    // They are already sorted
+    var colorList = ["#cc3333", "#cc33a6", "#7f33cc", "#3366cc",  "#59cc33"];
+    var lastColor = colorList[0];
+    var lastPrio = '-1';
+    var theColor = '';
+    \$('[data-priority]').each(function() {
+        // New one?
+        if(\$(this).data('priority') != lastPrio) {
+            // Update
+            theColor = colorList.pop() || lastColor;
+            lastPrio = \$(this).data('priority');
+        }
+        \$(this).css('background-color', theColor)
+    })
+    
     \$('.showserver').click(function () {
         \$(this).parent().next().toggle();
         \$(this).parent().next().next().toggle();
